--- a/Front/ljez/src/screens/Login.css
+++ b/Front/ljez/src/screens/Login.css
@@ -24,7 +24,7 @@ h1 {
   margin-top: 0;
   font-size: 48px;
   font-weight: bold;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  text-shadow: 2px 2px 4px rgb(255, 255, 255);
 }
 
 input {
